--- a/QuizApplication/QuizApplication/Views/Shared/_Layout.cshtml
+++ b/QuizApplication/QuizApplication/Views/Shared/_Layout.cshtml
@@ -21,9 +21,16 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Quiz", "Index", "Quiz")</li>
+                    @if (Request.IsAuthenticated)
+                    {
+                        <li>@Html.ActionLink("Admin", "Index", "Admin")</li>
+
+                    }
+
+
                 </ul>
+                @Html.Partial("_EmployeeLogin")
             </div>
         </div>
     </div>
@@ -37,6 +44,8 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+<script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
